--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -30,3 +30,9 @@ html,body,#app {
 .el-cascader-menu {
   height: 300px;
 }
+.el-steps {
+  margin-top: 15px;
+}
+.el-step__title {
+  font-size: 14px;
+}
